<resources>
    <string name="name_app">NMedia</string>
    <string name="name_app_greeting">NMedia!</string>
    <string name="post_author_avatar">Post author avatar</string>
    <string name="burger_menu" translatable="false">burger_menu</string>
    <string name="likes" translatable="false">likes</string>
    <string name="share_icon" translatable="false">share_icon</string>
    <string name="view_icon" translatable="false">view_icon</string>
    <string name="remove">Remove</string>
    <string name="content">Content</string>
    <string name="error_empty_text">Text is empty</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="_100" translatable="false">100</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="desc_post_save">Description post save</string>
    <string name="desc_cancel">Description cancel new post or old post</string>
    <string name="description_burger_menu" translatable="false">Description burger menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
</resources>