<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/imageSize"
        android:layout_height="@dimen/imageSize"
        android:layout_marginBottom="@dimen/padding"
        android:contentDescription="@string/post_author_avatar"

        app:layout_constraintBottom_toTopOf="@id/headerBottomBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:src="@sample/posts_avatars" />

    <TextView
        android:id="@+id/authorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding"
        android:singleLine="true"

        app:layout_constraintBottom_toTopOf="@id/publish"
        app:layout_constraintEnd_toStartOf="@id/burgerMenu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"

        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding"

        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/authorText"

        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/burgerMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/burger_menu"
        android:src="@drawable/more_vert"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBottomBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,publish,burgerMenu" />

    <TextView
        android:id="@+id/contentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginBottom="@dimen/padding"
        android:autoLink="web"
        app:layout_constraintBottom_toBottomOf="@id/footerBarrier"

        app:layout_constraintTop_toBottomOf="@id/headerBottomBarrier"

        tools:text="@sample/posts.json/data/contentText" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footerBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding"

        app:barrierDirection="bottom"
        app:constraint_referenced_ids="contentText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding"
        android:button="@drawable/ic_like_selector"
        android:checkable="true"
        android:contentDescription="@string/likes"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/_100"
        app:icon="@drawable/ic_like_selector"
        app:iconTint="@color/like_selector"

        app:layout_constraintTop_toBottomOf="@id/footerBarrier" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareIcon"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding"
        android:layout_marginVertical="@dimen/padding"

        android:clickable="false"
        android:contentDescription="@string/share_icon"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/_100"
        android:textColor="@android:color/black"

        app:icon="@drawable/ic_share"
        app:iconTint="@color/ic_share_color"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/footerBarrier" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewIcon"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="@dimen/padding"
        android:clickable="false"
        android:contentDescription="@string/view_icon"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:textColor="@android:color/black"

        android:text="@string/_100"

        app:icon="@drawable/ic_view"
        app:iconTint="@color/ic_view_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footerBarrier" />

</androidx.constraintlayout.widget.ConstraintLayout>